// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectLocationTypeScreen Tests rendering Add/Edit location API responses Renders Error Message on location api error 1`] = `
<React.Fragment>
  <View
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "flex": 1,
      }
    }
  >
    <CustomModalComponent
      animationType="none"
      isVisible={false}
      modalType="Form"
      onClose={[Function]}
    >
      <EnterLocation
        onSubmit={[Function]}
        setEnterLocation={[MockFunction]}
      />
    </CustomModalComponent>
    <View
      style={
        Object {
          "alignContent": "center",
          "justifyContent": "center",
          "marginBottom": 10,
          "marginTop": 10,
          "padding": 10,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontWeight": "bold",
            "textAlign": "center",
          }
        }
      >
        [missing "en.LOCATION.SCAN_INSTRUCTION" translation]
      </Text>
      <Text
        style={
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
            "paddingTop": 10,
            "textAlign": "center",
          }
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Object {
          "alignContent": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "width": "50%",
          }
        }
        title="[missing \\"en.LOCATION.MANUAL_ENTRY_BUTTON\\" translation]"
        titleColor="#0071e9"
        titleFontSize={12}
        titleFontWeight="bold"
        type={2}
        width={-1}
      />
    </View>
    <View
      style={
        Object {
          "alignContent": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": 20,
          "paddingLeft": 10,
        }
      }
    >
      <mockConstructor
        color="#e57373"
        name="alert"
        size={40}
      />
      <Text
        style={
          Object {
            "color": "#ec0439",
            "fontSize": 16,
          }
        }
      >
        [missing "en.LOCATION.ADD_LOCATION_API_ERROR" translation]
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "justifyContent": "flex-end",
        "padding": 10,
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={true}
      height={45}
      onPress={[Function]}
      radius={0}
      title="[missing \\"en.GENERICS.SUBMIT\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</React.Fragment>
`;

exports[`SelectLocationTypeScreen Tests rendering Add/Edit location API responses Renders the Activity indicator when waiting for response from AddLocation Api 1`] = `
<React.Fragment>
  <View
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "flex": 1,
      }
    }
  >
    <CustomModalComponent
      animationType="none"
      isVisible={false}
      modalType="Form"
      onClose={[Function]}
    >
      <EnterLocation
        onSubmit={[Function]}
        setEnterLocation={[MockFunction]}
      />
    </CustomModalComponent>
    <View
      style={
        Object {
          "alignContent": "center",
          "justifyContent": "center",
          "marginBottom": 10,
          "marginTop": 10,
          "padding": 10,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontWeight": "bold",
            "textAlign": "center",
          }
        }
      >
        [missing "en.LOCATION.SCAN_INSTRUCTION" translation]
      </Text>
      <Text
        style={
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
            "paddingTop": 10,
            "textAlign": "center",
          }
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Object {
          "alignContent": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "width": "50%",
          }
        }
        title="[missing \\"en.LOCATION.MANUAL_ENTRY_BUTTON\\" translation]"
        titleColor="#0071e9"
        titleFontSize={12}
        titleFontWeight="bold"
        type={2}
        width={-1}
      />
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "justifyContent": "flex-end",
        "padding": 10,
        "width": "100%",
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#0071e9"
      hidesWhenStopped={true}
      size="large"
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    />
  </View>
</React.Fragment>
`;

exports[`SelectLocationTypeScreen Tests rendering Add/Edit location API responses Renders the Activity indicator when waiting for response from EditLocation Api 1`] = `
<React.Fragment>
  <View
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "flex": 1,
      }
    }
  >
    <CustomModalComponent
      animationType="none"
      isVisible={false}
      modalType="Form"
      onClose={[Function]}
    >
      <EnterLocation
        onSubmit={[Function]}
        setEnterLocation={[MockFunction]}
      />
    </CustomModalComponent>
    <View
      style={
        Object {
          "alignContent": "center",
          "justifyContent": "center",
          "marginBottom": 10,
          "marginTop": 10,
          "padding": 10,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontWeight": "bold",
            "textAlign": "center",
          }
        }
      >
        [missing "en.LOCATION.SCAN_INSTRUCTION" translation]
      </Text>
      <Text
        style={
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
            "paddingTop": 10,
            "textAlign": "center",
          }
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Object {
          "alignContent": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "width": "50%",
          }
        }
        title="[missing \\"en.LOCATION.MANUAL_ENTRY_BUTTON\\" translation]"
        titleColor="#0071e9"
        titleFontSize={12}
        titleFontWeight="bold"
        type={2}
        width={-1}
      />
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "justifyContent": "flex-end",
        "padding": 10,
        "width": "100%",
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#0071e9"
      hidesWhenStopped={true}
      size="large"
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    />
  </View>
</React.Fragment>
`;

exports[`SelectLocationTypeScreen Tests rendering the SelectLocationType Screen Renders Location Name above manual location enter 1`] = `
<React.Fragment>
  <View
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "flex": 1,
      }
    }
  >
    <CustomModalComponent
      animationType="none"
      isVisible={false}
      modalType="Form"
      onClose={[Function]}
    >
      <EnterLocation
        onSubmit={[Function]}
        setEnterLocation={[MockFunction]}
      />
    </CustomModalComponent>
    <View
      style={
        Object {
          "alignContent": "center",
          "justifyContent": "center",
          "marginBottom": 10,
          "marginTop": 10,
          "padding": 10,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontWeight": "bold",
            "textAlign": "center",
          }
        }
      >
        [missing "en.LOCATION.SCAN_INSTRUCTION" translation]
      </Text>
      <Text
        style={
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
            "paddingTop": 10,
            "textAlign": "center",
          }
        }
      >
        TestLocation-3
      </Text>
    </View>
    <View
      style={
        Object {
          "alignContent": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "width": "50%",
          }
        }
        title="[missing \\"en.LOCATION.MANUAL_ENTRY_BUTTON\\" translation]"
        titleColor="#0071e9"
        titleFontSize={12}
        titleFontWeight="bold"
        type={2}
        width={-1}
      />
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "justifyContent": "flex-end",
        "padding": 10,
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={true}
      height={45}
      onPress={[Function]}
      radius={0}
      title="[missing \\"en.GENERICS.SUBMIT\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</React.Fragment>
`;

exports[`SelectLocationTypeScreen Tests rendering the SelectLocationType Screen Renders the EnterLocation Modal as visible  1`] = `
<React.Fragment>
  <View
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "flex": 1,
      }
    }
  >
    <CustomModalComponent
      animationType="none"
      isVisible={true}
      modalType="Form"
      onClose={[Function]}
    >
      <EnterLocation
        onSubmit={[Function]}
        setEnterLocation={[MockFunction]}
      />
    </CustomModalComponent>
    <View
      style={
        Object {
          "alignContent": "center",
          "justifyContent": "center",
          "marginBottom": 10,
          "marginTop": 10,
          "padding": 10,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontWeight": "bold",
            "textAlign": "center",
          }
        }
      >
        [missing "en.LOCATION.SCAN_INSTRUCTION" translation]
      </Text>
      <Text
        style={
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
            "paddingTop": 10,
            "textAlign": "center",
          }
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Object {
          "alignContent": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "width": "50%",
          }
        }
        title="[missing \\"en.LOCATION.MANUAL_ENTRY_BUTTON\\" translation]"
        titleColor="#0071e9"
        titleFontSize={12}
        titleFontWeight="bold"
        type={2}
        width={-1}
      />
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "justifyContent": "flex-end",
        "padding": 10,
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={true}
      height={45}
      onPress={[Function]}
      radius={0}
      title="[missing \\"en.GENERICS.SUBMIT\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</React.Fragment>
`;

exports[`SelectLocationTypeScreen Tests rendering the SelectLocationType Screen Renders the selectLocationScreen default  1`] = `
<React.Fragment>
  <View
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "flex": 1,
      }
    }
  >
    <CustomModalComponent
      animationType="none"
      isVisible={false}
      modalType="Form"
      onClose={[Function]}
    >
      <EnterLocation
        onSubmit={[Function]}
        setEnterLocation={[MockFunction]}
      />
    </CustomModalComponent>
    <View
      style={
        Object {
          "alignContent": "center",
          "justifyContent": "center",
          "marginBottom": 10,
          "marginTop": 10,
          "padding": 10,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontWeight": "bold",
            "textAlign": "center",
          }
        }
      >
        [missing "en.LOCATION.SCAN_INSTRUCTION" translation]
      </Text>
      <Text
        style={
          Object {
            "fontSize": 16,
            "fontWeight": "bold",
            "paddingTop": 10,
            "textAlign": "center",
          }
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Object {
          "alignContent": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "width": "50%",
          }
        }
        title="[missing \\"en.LOCATION.MANUAL_ENTRY_BUTTON\\" translation]"
        titleColor="#0071e9"
        titleFontSize={12}
        titleFontWeight="bold"
        type={2}
        width={-1}
      />
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "justifyContent": "flex-end",
        "padding": 10,
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={true}
      height={45}
      onPress={[Function]}
      radius={0}
      title="[missing \\"en.GENERICS.SUBMIT\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</React.Fragment>
`;
